Added missing Yinshun variants to SA fasc 1.

--- a/sa/sa18.html
+++ b/sa/sa18.html
@@ -141,6 +141,7 @@
     <segment>
       <root>「善哉！善哉！汝云何於我略說法中，廣解其義？</root>
       <translation></translation>
+      <variant>云何 → () (yinshun)</variant>
     </segment>
     <segment>
       <root>所以者何？</root>
