--- a/sa/sa19.html
+++ b/sa/sa19.html
@@ -130,6 +130,7 @@
     <segment>
       <root>如是受、想、行、識結所繫法，是結所繫法宜速除斷。</root>
       <translation></translation>
+      <variant>識 → 識是 (yinshun)</variant>
     </segment>
     <segment>
       <root>斷彼法已，以義饒益，長夜安樂。</root>
