--- a/sa/sa20.html
+++ b/sa/sa20.html
@@ -20,7 +20,7 @@
       <root>深經亦如是說。</root>
       <translation></translation>
       <reference>t99.2.4b25</reference>
-      <variant>深 → 染 (CBETA)</variant>
+      <variant>深 → 染 (CBETA, yinshun)</variant>
     </segment>
   </p>
 </article>
