--- a/sa/sa23.html
+++ b/sa/sa23.html
@@ -77,6 +77,7 @@
     <segment>
       <root>羅睺羅！當觀若所有諸色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切悉皆非我、不異我、不相在。</root>
       <translation></translation>
+      <variant>當觀若 → 當觀 (yinshun)</variant>
     </segment>
     <segment>
       <root>如是平等慧正觀。</root>
@@ -103,6 +104,7 @@
     <segment>
       <root>比丘如是知、如是見。</root>
       <translation></translation>
+      <variant>如是知、如是見。 → () (yinshun)</variant>
     </segment>
     <segment>
       <root>如是知、如是見者，於此識身及外境界一切相，無有我、我所見、我慢使繫著。</root>
