--- a/sa/sa24.html
+++ b/sa/sa24.html
@@ -24,7 +24,7 @@
     <segment>
       <root>一時，佛住王舍城伽蘭陀竹園。</root>
       <translation></translation>
-      <variant>伽 → 迦 (宋, 元, 明)</variant>
+      <variant>伽 → 迦 (宋, 元, 明, yinshun)</variant>
     </segment>
   </p>
   <p>
@@ -148,6 +148,7 @@
         <segment>
           <root>結繫、動搖</root>
           <translation></translation>
+          <variant>動搖 → 染動搖 (yinshun)</variant>
         </segment>
       </span>
       <span class='verse-line'>
