--- a/sa/sa27.html
+++ b/sa/sa27.html
@@ -80,7 +80,7 @@
     <segment>
       <root>如是受、想、行、識，於識向厭、離欲、滅盡。</root>
       <translation></translation>
-      <variant>是 → 是於 (宋, 元, 明)</variant>
+      <variant>是 → 是於 (宋, 元, 明, yinshun) | 於識 → 識 (yinshun)</variant>
     </segment>
     <segment>
       <root>是名法次法向。」</root>
