--- a/sa/sa28.html
+++ b/sa/sa28.html
@@ -87,7 +87,7 @@
     <segment>
       <root>如是受、想、行、識，於識生厭、離欲、滅盡，不起諸漏，心正解脫。</root>
       <translation></translation>
-      <variant>於識 → () (宋, 元, 明)</variant>
+      <variant>受 → 於受 (yinshun) | 於識 → () (宋, 元, 明, yinshun)</variant>
     </segment>
     <segment>
       <root>是名比丘見法涅槃。」</root>
