--- a/sa/sa29.html
+++ b/sa/sa29.html
@@ -77,7 +77,7 @@
     <segment>
       <root>如是於受、想、行、識，於識說厭、離欲、滅盡。</root>
       <translation></translation>
-      <variant>於識 → () (宋, 元, 明)</variant>
+      <variant>於識 → () (宋, 元, 明, yinshun)</variant>
     </segment>
     <segment>
       <root>是名說法師。」</root>
@@ -117,7 +117,6 @@
         <segment>
           <root>三蜜離提問</root>
           <translation></translation>
-          <variant>蜜 → 密 (宋, 元, 明)</variant>
         </segment>
       </span>
       <span class='verse-line'>
