--- a/sa/sa30.html
+++ b/sa/sa30.html
@@ -73,6 +73,7 @@
       <root>「若沙門、婆羅門於無常色、不安隱色、變易言：</root>
       <translation></translation>
       <reference>t99.2.6b4</reference>
+      <variant>不安隱色、變易 → 變易、不安隱色 (yinshun)</variant>
     </segment>
     <segment>
       <root>『我勝、我等、我劣。』</root>
