--- a/sa/sa31.html
+++ b/sa/sa31.html
@@ -120,6 +120,21 @@
   </p>
   <p>
     <segment>
+      <root>舍利弗言：</root>
+      <translation></translation>
+      <reference>t99.2.6c22</reference>
+    </segment>
+    <segment>
+      <root>「若色無常、苦者，是變易法。</root>
+      <translation></translation>
+    </segment>
+    <segment>
+      <root>聖弟子寧於中見色是我、異我、相在不？」</root>
+      <translation></translation>
+    </segment>
+  </p>
+  <p>
+    <segment>
       <root>答言：</root>
       <translation></translation>
       <reference>t99.2.6c23</reference>
@@ -224,6 +239,14 @@
     <segment>
       <root>輸屢那！聖弟子於識生厭、離欲、解脫，解脫生、老、病、死、憂、悲、苦、惱。」</root>
       <translation></translation>
+    </segment>
+  </p>
+  <p>
+    <segment>
+      <root>時，輸屢那聞舍利弗所說，歡喜踊躍，作禮已，去。</root>
+      <translation></translation>
+      <reference>t99.2.7a8</reference>
+      <variant>，去 → 而去 (yinshun)</variant>
     </segment>
   </p>
 </article>
